@@ -1,2 +1,45 @@
 # pacmanGame
-This is a pacman game implemented in java/javafx, it is the usual pacman gameplay with multiple levels, with some added features and new sounds
+This is a pacman game implemented in java/javafx, it is the usual pacman gameplay with multiple levels, with new added features, new sounds, see the pictures below
+
+First to run the last pacman version you need to write in the command line the following: java --module-path "UserPath\openjfx-17.0.1_windows-x64_bin-sdk\javafx-sdk-17.0.1\lib" --add-modules javafx.controls,javafx.fxml,javafx.media -jar pacmanLast.jar
+
+
+Homepage: 
+
+![pacman_homepage](https://user-images.githubusercontent.com/60703304/211788538-85e92b61-31e2-4a40-b366-e062c5702f32.png)
+
+
+Nickname: 
+
+![nickname](https://user-images.githubusercontent.com/60703304/211788673-ecf858dc-24c2-4b9b-9e4d-bde89d53be5c.png)
+
+
+pacman skin:
+
+![pacman_skin](https://user-images.githubusercontent.com/60703304/211788825-dd3d7d72-488a-4782-affa-77ffa3b7cff7.png)
+
+Gameplay:
+
+![gameplay](https://user-images.githubusercontent.com/60703304/211788876-9129a802-869e-453f-8c2b-210968c3f33a.png)
+
+
+Questions:
+
+![questions_screen](https://user-images.githubusercontent.com/60703304/211788997-f4bb4fe0-7ac0-4bb5-8311-d372a6932c45.png)
+
+
+Leaderboard:
+
+![leaderboard](https://user-images.githubusercontent.com/60703304/211789057-ba7d180b-2727-474c-9b8e-c860c7dc5ed5.png)
+
+Questions:
+
+![questions](https://user-images.githubusercontent.com/60703304/211789156-4d1ae308-e0c5-48a0-bda4-27b596a44397.png)
+
+Adding new Questions:
+
+![new_question](https://user-images.githubusercontent.com/60703304/211789270-8d2e245d-b6a9-4244-937c-cb6cf17baf42.png)
+
+
+
+
